w/a for a mobile chrome column layout bug

--- a/skin/assets/styles/components/article/_article-vgde.scss
+++ b/skin/assets/styles/components/article/_article-vgde.scss
@@ -311,7 +311,7 @@ body.home, body.category {
       .article-grid {
         break-inside: avoid;
         width: 100%;
-        margin-bottom: 1em;
+        padding-bottom: 1em;
         .article-grid-wrapper {
           img {
             max-height: 50vw;
